--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL="mongodb+srv://dharmendra:dharm2900@cluster0.pb6reer.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL=mongodb+srv://dharmendra:0037@cluster0.pb6reer.mongodb.net/?retryWrites=true&w=majority
